Uploaded preprint of SC23 and PDP

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,8 @@
   author={Fan, Kaijie and D'Antonio, Marco and Carpentieri, Lorenzo and Cosenza, Biagio and Ficarelli, Federico and Cesarini, Daniele},
   booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
   pages={1--13},
+  selected={true}
+  pdf={SC23}
   year={2023}
 }
 
