Updated pre print

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,31 @@
+
+@inproceedings{syproxICS25,
+  title={SYprox: Combining Host and Device Perforation with Mixed Precision Approximation on Heterogeneous Architectures},
+  author={Carpentieri, Lorenzo and Cosenza, Biagio},
+  booktitle={Proceedings of the International Conference on Supercomputing (ICS 2025)},
+  year={2025}
+}
+
+
+
+@inproceedings{phasebasedIPDPS25,
+  title={Phase-based Frequency Scaling for Energy-efficient Heterogeneous Computing},
+  author={Carpentieri, Lorenzo and De Caro, Antonio and Salimi Beni, Majid and Fan, Kaijie and Cosenza, Biagio},
+  booktitle={Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium (IPDPS 2025)},
+  year={2025}
+  pdf={IPDPS25.pdf}
+}
+
+
+
+@inproceedings{rvvPDP25,
+  title={A Performance Analysis of Autovectorization on RVV RISC-V Boards},
+  author={Carpentieri, Lorenzo and VazirPanha, Mohammad and Cosenza, Biagio},
+  booktitle={Proceedings of the International Conference on Parallel, Distributed and Network-Based Processing (PDP 2025)},
+  year={2025}
+  pdf={PDP2025.pdf}
+}
+
 @inproceedings{fan2023synergy,
   title={Synergy: Fine-grained energy-efficient heterogeneous computing for scalable energy saving},
   author={Fan, Kaijie and D'Antonio, Marco and Carpentieri, Lorenzo and Cosenza, Biagio and Ficarelli, Federico and Cesarini, Daniele},
