Fixed pdf ipdps bibtex

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   title={Phase-based Frequency Scaling for Energy-efficient Heterogeneous Computing},
   author={Carpentieri, Lorenzo and De Caro, Antonio and Salimi Beni, Majid and Fan, Kaijie and Cosenza, Biagio},
   booktitle={Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium (IPDPS 2025)},
-  year={2025}
+  year={2025},
   pdf={IPDPS25.pdf}
 }
 
