Fixed papers bibtex

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
   title={A Performance Analysis of Autovectorization on RVV RISC-V Boards},
   author={Carpentieri, Lorenzo and VazirPanha, Mohammad and Cosenza, Biagio},
   booktitle={Proceedings of the International Conference on Parallel, Distributed and Network-Based Processing (PDP 2025)},
-  year={2025}
+  year={2025},
   pdf={PDP2025.pdf}
 }
 
@@ -31,8 +31,8 @@
   author={Fan, Kaijie and D'Antonio, Marco and Carpentieri, Lorenzo and Cosenza, Biagio and Ficarelli, Federico and Cesarini, Daniele},
   booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
   pages={1--13},
-  selected={true}
-  pdf={SC23}
+  selected={true},
+  pdf={SC23},
   year={2023}
 }
 
