--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
   title={SYprox: Combining Host and Device Perforation with Mixed Precision Approximation on Heterogeneous Architectures},
   author={Carpentieri, Lorenzo and Cosenza, Biagio},
   booktitle={Proceedings of the International Conference on Supercomputing (ICS 2025)},
+  selected={true},
   year={2025}
 }
 
@@ -13,6 +14,7 @@
   author={Carpentieri, Lorenzo and De Caro, Antonio and Salimi Beni, Majid and Fan, Kaijie and Cosenza, Biagio},
   booktitle={Proceedings of the 39th IEEE International Parallel & Distributed Processing Symposium (IPDPS 2025)},
   year={2025},
+  selected={true},
   pdf={IPDPS25.pdf}
 }
 
